--- a/package.json
+++ b/package.json
@@ -1,5 +1,27 @@
 {
   "dependencies": {
+    "axios": "^1.13.2",
+    "express": "^5.2.1",
     "nanoid": "^5.1.6"
-  }
+  },
+  "name": "estore",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "node --watch server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/laura-liisparm/eStore.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/laura-liisparm/eStore/issues"
+  },
+  "homepage": "https://github.com/laura-liisparm/eStore#readme"
 }
